# tools-optimadeclient-react

./: .gitignore  README.md  cachedPTable.json  cachedPTableBinary.json  cachedProviders.json  counts.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  stats.html  vite.config.js  vite.widget.config.js
.github/workflows/: publish.yml
.ipynb_checkpoints/: test-checkpoint.ipynb
assets/: index-7KyJ6qgV.js  index-B8aQp728.js  index-BHbrKeXf.js  index-BJG9ldaL.js  index-BQD9p51M.js  index-BRctdG6B.js  index-BUPNJ-xS.js  index-BeNXdU97.js  index-BeYafeXf.js  index-BkAC9XOB.js  index-Bq9BTlp9.js  index-Bu04vCwF.js  index-Bzww5aHr.css  index-C0ws4RSE.js  index-C4J4IqLm.css  index-CEE5-VRI.js  index-CFWRmBsV.js  index-CGIUcf5g.js  index-CIAhlSHf.js  index-CKGse48l.js  index-CKO3c4rp.js  index-CKuDF2RG.css  index-COqGziVr.js  index-CU18LH9r.css  index-C_LHIT0z.css  index-Ca0WP4Ns.js  index-CjT_tmww.js  index-CqqJKG3r.js  index-CuLpAcAd.js  index-CxD81-mI.js  index-CzvUlfo8.js  index-D7ThxhBp.js  index-D8fqkiiB.css  index-DB8MBhwO.css  index-DBC3LMTH.css  index-DDduEfvC.css  index-DFR21g74.css  index-DNX86gzu.js  index-DS5AnLB5.js  index-DS7ltxPV.js  (+18 more)
optimadewidget/: optimade_widget.py
public/: cachedPTable.json  cachedPTableBitMap.json  counts.json
scripts/: build-counts-cache.mjs  build-ptable-cache.mjs
src/: App.jsx  api.js  corsProxies.js  main.jsx  utils.js
src/components/OptimadeClient/: OptimadeChildInfo.jsx  OptimadeParentInfo.jsx  OptimadeProviderInfo.jsx  OptimadeQuerier.jsx  PaginationHandler.jsx  ResultViewer.jsx  ResultsDropdown.jsx  index.jsx
src/components/OptimadeClient/DropdownSelectors/: childProviderDropdown.jsx  parentProviderDropdown.jsx
src/components/OptimadeClient/OptimadeFilters/: index.jsx
src/components/OptimadeClient/OptimadeFilters/OptimadePTable/: elements.js  index.jsx
src/components/OptimadeClient/OptimadeFilters/OptimadeRawQuery/: index.jsx
src/components/OptimadeSmilesHandler/: index.jsx
src/components/OptimadeStructureHandler/: index.jsx
src/components/common/: HelpIcon.jsx  RangeSlider.jsx  StructureDownload.jsx
src/components/common/PTableWrapper/: index.jsx
src/styles/: dropdownStyles.js
src/widget/: optimade_widget.jsx
