[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "widget-optimade-client"
version = "0.1.0"
description = "A Jupyter widget for querying OPTIMADE-compatible providers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["traitlets>=5.0", "anywidget>=0.2"]

[tool.hatch.build]
ignore-vcs = true


[tool.hatch.build.targets.wheel]
packages = ["optimadewidget"]
include = [
    "optimadewidget/widget-dist/*.js",
    "optimadewidget/widget-dist/*.css"
]